# linux_rpc_monitor

./: CMakeLists.txt
.cache/clangd/index/: base.h.D499E4014FB56B3E.idx  client.cc.80FD7348E0C6B661.idx  client.h.0333FBFF809ADA4A.idx  cpu_load.cc.1F65DBCA2F13154F.idx  cpu_load.h.F0A65D0F2900BB5D.idx  cpu_load.pb.cc.C89363F33FC9681C.idx  cpu_load.pb.h.87400685C232C548.idx  cpu_softirq.cc.F6B8F1E0B65133AC.idx  cpu_softirq.h.66822CB4FB6453E0.idx  cpu_softirq.pb.cc.2014A0C37B67C68D.idx  cpu_softirq.pb.h.F55F5CF5A3CE16C8.idx  cpu_stat.cc.C29F81C53CF708FC.idx  cpu_stat.h.C75C80E617C9C543.idx  cpu_stat.pb.cc.93DA7D3230C4CE28.idx  cpu_stat.pb.h.FE4D4E687CE62F5E.idx  mem_info.cc.D827BCE3330BDA6C.idx  mem_info.h.6143C42186B86C2F.idx  mem_info.pb.cc.FA44442B4106DD48.idx  mem_info.pb.h.3C4A2B7AAAB5A261.idx  net_info.cc.D1AB60A2CDDF3418.idx  net_info.h.6F5165CA325229F7.idx  net_info.pb.cc.E023FB041A993213.idx  net_info.pb.h.AD360458646ABE5F.idx  server.cc.D7F61723BADDE038.idx  service.pb.cc.1E615BFF55541CA5.idx  service.pb.h.CB59DCB20E907618.idx  util.cc.1A8DE8A486781184.idx  util.h.5269514A7DDA2DC3.idx
display/: CMakeLists.txt
display/include/: load_ui.hpp  mem_ui.hpp  net_ui.hpp  softirq_ui.hpp  stat_ui.hpp  ui.h
display/src/: display.cc
monitor/: CMakeLists.txt
monitor/include/: base.h  cpu_load.h  cpu_softirq.h  cpu_stat.h  mem_info.h  net_info.h  util.h
monitor/src/: cpu_load.cc  cpu_softirq.cc  cpu_stat.cc  mem_info.cc  net_info.cc  util.cc
protocol/: CMakeLists.txt  cpu_load.proto  cpu_softirq.proto  cpu_stat.proto  mem_info.proto  net_info.proto  service.proto
protocol/message/: cpu_load.pb.cc  cpu_load.pb.h  cpu_softirq.pb.cc  cpu_softirq.pb.h  cpu_stat.pb.cc  cpu_stat.pb.h  mem_info.pb.cc  mem_info.pb.h  net_info.pb.cc  net_info.pb.h  service.pb.cc  service.pb.h
rpc/: CMakeLists.txt
rpc/include/: client.h
rpc/src/: client.cc  server.cc
